infrastructure/ip-access/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-access
  namespace: platform-access
  annotations:
    metallb.io/loadBalancerIPs: 192.168.2.154
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Local
  loadBalancerSourceRanges:
    - 192.168.31.97/32
  selector:
    app.kubernetes.io/name: ip-access-nginx
  ports:
    - { name: argocd, port: 31001, targetPort: argocd }
    - { name: harbor, port: 31002, targetPort: harbor }
    - { name: openbao, port: 31003, targetPort: openbao }
    - { name: openchoreo, port: 31004, targetPort: openchoreo }
    - { name: observer, port: 31005, targetPort: observer }
    - { name: thunder, port: 31006, targetPort: thunder }
